--- a/literatura.bib
+++ b/literatura.bib
@@ -249,6 +249,21 @@ address = {USA}
     note = "online, accessed 02-November-2020",
     url = "https://www.analyticsvidhya.com/blog/2020/05/what-is-tokenization-nlp/"
     }
+@Misc{tokenization_twd,
+    title = "Tokenization for Natural Language Processing",
+    author = {Chakravarthy, Srinivas},
+    year={2019},
+    note = "online, accessed 03-November-2020",
+    url = "https://towardsdatascience.com/tokenization-for-natural-language-processing-a179a891bad4"
+    }
+    
+    @Misc{tokenization_mgl,
+    title = "Tokenising into Words and Sentences | What is Tokenization and it’s Definition?",
+    author = {Mujtaba, Hussain},
+    year={2020},
+    note = "online, accessed 03-November-2020",
+    url = "https://www.mygreatlearning.com/blog/tokenization/"
+    }
     
  @book{stopwords, place={Cambridge}, title={Introduction to Information Retrieval}, DOI={10.1017/CBO9780511809071}, publisher={Cambridge University Press}, author={Manning, Christopher D. and Raghavan, Prabhakar and Schütze, Hinrich}, year={2008}}
  
