--- a/zaver.tex
+++ b/zaver.tex
@@ -1,5 +1,5 @@
 \chapter*{Conclusion}
-\addcontentsline{toc}{chapter}{Závěr}
+\addcontentsline{toc}{chapter}{Conclusion}
 
 Závěr je povinnou částí bakalářské/diplomové práce. Obsahuje shrnutí práce a vyjadřuje se k míře splnění cíle, který byl v práci stanoven, případně shrnuje odpovědi na otázky, které byly položeny v úvodu práce. 
 
