--- a/makra.tex
+++ b/makra.tex
@@ -55,6 +55,8 @@ listing only,listing options={language=sh,style=base}}
 \usepackage{multicol}       % práce s více sloupci na stránce
 \usepackage{caption}
 \usepackage{enumitem}
+\usepackage{lscape}
+\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \setlist[itemize]{noitemsep, topsep=0pt, partopsep=0pt}
 \setlist[enumerate]{noitemsep, topsep=0pt, partopsep=0pt}
 \setlist[description]{noitemsep, topsep=0pt, partopsep=0pt}
